--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,5 +10,7 @@
     <string name="thirdPassword">c</string>
     <string name="hackPassword">!</string>
     <string name="ic_launcher">Launcher</string>
+    <string name="start_button">Start jakten!</string>
+    <string name="target_latitude">2</string>
 
 </resources>
